--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,14 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="DatePickerDialogSpinner" parent="android:Theme.Holo.Light.Dialog">
+        <item name="android:positiveButtonText">@style/DatePickerDialogSpinnerButtonStyle</item>
+    </style>
+
+    <style name="DatePickerDialogSpinnerButtonStyle">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
